Cleaned up some variable names in functions/scripts.js for better readablity. Fixed an issue where literal user input was being used as an html class name: special chars and whitespace is now being removed before being passed as a class name.

--- a/styles.css
+++ b/styles.css
@@ -65,8 +65,11 @@ main {
 }
 
 .submit {
-  padding: 1em;
   position: relative;
+}
+
+.submit input {
+  padding: 8px;
 }
 
 .timer-box {
